# brain-games

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: lint.yml
brain_games/: cli.py  engine.py
brain_games/games/: calc.py  even.py  gcd.py  logic.py  newgames.py  prime.py  progrs.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
